<resources>
    <string name="app_name">Notes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_fragment_settings">Fragment Settings</string>
    <string name="action_activity_settings">Activity Settings</string>

    <!-- navigation drawer example //-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="drawer_example">Drawer Example</string>
    <string name="example_recyclerview">RecyclerView Example</string>
    <string name="example_location">Fused Location Example</string>
    <string name="post_note">Post Note</string>
    <string name="keep_awake_tests">Keep Awake Tests</string>
    <string name="title_activity_rxjava">RXJavaActivity</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rxjava_tests">RXJava Tests</string>
    <string name="percents_views">Using percents to define views</string>
</resources>
